--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.6",
+        "livewire/livewire": "^3.5",
         "mcamara/laravel-localization": "^2.0",
         "php-flasher/flasher-laravel": "^1.15",
         "spatie/laravel-translatable": "^6.11"
